--- a/docs/钉钉.md
+++ b/docs/钉钉.md
@@ -15,3 +15,29 @@ dingkaxiw6y35djuy1cb
 3、通知钉钉
 https://oapi.dingtalk.com/robot/send?access_token=595141398856ac5d2f614f0999029d4b5b7e74bcfa0faa2e8fa014e7b8d9f07c
 SEC29bf9cee13c396ca17c6a860aecd9fe462d558fed6ba23233d9c6d63f0d4796a
+
+
+
+4、接收的Json
+```json
+{
+    "atUsers": null,
+    "chatbotUserId": "",
+    "conversationId": "",
+    "conversationTitle": "",
+    "conversationType": "",
+    "createAt": 0,
+    "isAdmin": false,
+    "isInAtList": false,
+    "msgId": "",
+    "msgtype": "",
+    "sceneGroupCode": "",
+    "senderId": "",
+    "senderNick": "",
+    "sessionWebhook": "",
+    "sessionWebhookExpiredTime": 0,
+    "text": {
+            "content": ""
+    }
+}
+```
